# homeaccess-api

./: .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  OPENAPI.md  README.md  TEST_SCRIPT.md  docs.html  openapi.json  openapi.yaml  render.yaml  test_endpoints.sh
src/: ]  auth.rs  cache.rs  fetchers.rs  handlers.rs  main.rs  routes.rs  scraping.rs
