[package]
name = "hac-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.42"
indexmap = "2.11.4"
reqwest = {version = "0.12.23", features = ["cookies", "json"]}
scraper = "0.24.0"
serde = {version = "1.0.227", features = ["derive"]}
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["full"]}
